Updated pom.xml and Added ExceptionHandler